--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,10 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>serial</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>eigen_catkin</build_depend>
+  <build_depend>eigen_conversions</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <!-- run_depend>cmake_modules</run_depend -->
 </package>
